make map boxes square and fix translation overflow on container

--- a/static/style.css
+++ b/static/style.css
@@ -267,7 +267,6 @@ checkable{
     gap: 10px;              /* space between icon and text */
     padding: 5px 8px;
     border: 3px solid #000;
-    border-radius: 4px;
     transition: background-color 0.2s;
 }
 
@@ -281,7 +280,6 @@ checkable{
     cursor: pointer;
     background-color: #ff79c3;
     box-shadow: 3px;
-    transform: translate(-1px, -1px);
 }
 
 .map-container .topic:active {
